--- a/berita-details.html
+++ b/berita-details.html
@@ -275,11 +275,11 @@
 
                 </div>
                 <div class="project-nav">
-                    <a href="project-details.html" class="nav-btn">
+                    <a href="berita-details.html" class="nav-btn">
                         <i class="far fa-arrow-left icon-btn"></i>
                         Previous
                     </a>
-                    <a href="project-details.html" class="nav-btn">
+                    <a href="berita-details.html" class="nav-btn">
                         Next
                         <i class="far fa-arrow-right icon-btn"></i>
                     </a>
