--- a/profil.html
+++ b/profil.html
@@ -291,7 +291,7 @@
                                 Aplikasi ini menjadi jembatan antara pelaku UMKM desa, pengrajin, petani, nelayan, dan
                                 masyarakat umum dengan pasar yang lebih luas, baik di tingkat kabupaten maupun nasional.
                             </p>
-                            <p>Dengan antarmuka yang ramah pengguna dan dukungan sistem pembayaran yang aman, PasarKito
+                            <p>Dengan antarmuka yang ramah pengguna dan dukungan sistem pembayaran yang aman, Pasar Desa
                                 membantu pelaku usaha desa memanfaatkan teknologi digital untuk meningkatkan pendapatan
                                 dan memperkuat daya saing produk lokal.
                             </p>
