--- a/produk-details.html
+++ b/produk-details.html
@@ -255,7 +255,7 @@
             <div class="th-mobile-menu">
                 <ul>
                     <li>
-                        <a href="#">Beranda</a>
+                        <a href="index.html">Beranda</a>
                     </li>
                     <li class="menu-item-has-children">
                         <a href="#">Tentang Pasar Desa</a>
@@ -266,13 +266,13 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#">Produk</a>
+                        <a href="produk.html">Produk</a>
                     </li>
                     <li>
-                        <a href="#">Galeri</a>
+                        <a href="faq.html">FAQ</a>
                     </li>
                     <li>
-                        <a href="#">Kontak</a>
+                        <a href="kontak.html">Kontak</a>
                     </li>
                 </ul>
             </div>
@@ -721,84 +721,23 @@
                 alt="shape"></div>
         <div class="widget-area">
             <div class="container">
-                <div class="row justify-content-between">
-                    <div class="col-md-6 col-xl-auto">
+                <div class="row justify-content-center text-center">
+                    <div class="col-auto">
                         <div class="widget footer-widget">
-                            <div class="th-widget-about">
-                                <div class="about-logo">
-                                    <a href="index.html"><img src="assets/img/pd.png" alt="Frutin"></a>
-                                </div>
-                                <p class="about-text">We provide specialized winterization services to safeguard your
-                                    pool during the off-season, and when spring arrives, we handle the thorough opening
-                                    process.</p>
-                                <div class="th-social">
-                                    <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
-                                    <a href="https://www.twitter.com/"><i class="fab fa-twitter"></i></a>
-                                    <a href="https://www.linkedin.com/"><i class="fab fa-linkedin-in"></i></a>
-                                    <a href="https://www.whatsapp.com/"><i class="fab fa-whatsapp"></i></a>
-                                </div>
+                            <div class="about-logo">
+                                <a href="index.html"><img src="assets/img/pd.png" alt="Frutin"></a>
                             </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-xl-auto">
-                        <div class="widget widget_nav_menu footer-widget">
-                            <h3 class="widget_title"><img src="assets/img/theme-img/title_icon.svg"
-                                    alt="Icon">Categories</h3>
-                            <div class="menu-all-pages-container">
-                                <ul class="menu">
-                                    <li><a href="produk.html">Fresh Vegetable</a></li>
-                                    <li><a href="produk.html">Natural Fruits</a></li>
-                                    <li><a href="produk.html">Dairy Products</a></li>
-                                    <li><a href="produk.html">Tea & Coffee</a></li>
-                                    <li><a href="produk.html">Meat and Fish</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-xl-auto">
-                        <div class="widget widget_nav_menu footer-widget">
-                            <h3 class="widget_title"><img src="assets/img/theme-img/title_icon.svg" alt="Icon">Quick
-                                Links</h3>
-                            <div class="menu-all-pages-container">
-                                <ul class="menu">
-                                    <li><a href="profil.html">About Us</a></li>
-                                    <li><a href="project.html">Portfolio</a></li>
-                                    <li><a href="faq.html">Help & FAQs</a></li>
-                                    <li><a href="berita.html">Blog</a></li>
-                                    <li><a href="contact.html">Contact Us</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-xl-auto">
-                        <div class="widget footer-widget">
-                            <h3 class="widget_title"><img src="assets/img/theme-img/title_icon.svg" alt="Icon">Contact
-                                Us</h3>
-                            <div class="th-widget-contact">
-                                <div class="info-box">
-                                    <div class="info-box_icon">
-                                        <i class="fas fa-location-dot"></i>
-                                    </div>
-                                    <p class="info-box_text">8502 Preston Rd. Inglewood, Maine 98380</p>
-                                </div>
-                                <div class="info-box">
-                                    <div class="info-box_icon">
-                                        <i class="fas fa-phone"></i>
-                                    </div>
-                                    <p class="info-box_text">
-                                        <a href="tel:+16326543564" class="info-box_link">+(163)-2654-3564</a>
-                                        <a href="tel:+16326545432" class="info-box_link">+(163)-2654-5432</a>
-                                    </p>
-                                </div>
-                                <div class="info-box">
-                                    <div class="info-box_icon">
-                                        <i class="fas fa-envelope"></i>
-                                    </div>
-                                    <p class="info-box_text">
-                                        <a href="mailto:help24/7@frutin.com"
-                                            class="info-box_link">help24/7@frutin.com</a>
-                                    </p>
-                                </div>
+                            <p class="about-text">Pasar Desa adalah platform digital berbasis website yang dirancang
+                                khusus untuk memfasilitasi desa-desa di Kabupaten Ogan Ilir dalam mempromosikan dan
+                                menjual produk-produk lokal unggulan.
+                                Aplikasi ini menjadi jembatan antara pelaku UMKM desa, pengrajin, petani, nelayan,
+                                dan masyarakat umum dengan pasar yang lebih luas, baik di tingkat kabupaten maupun
+                                nasional.</p>
+                            <div class="th-social">
+                                <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
+                                <a href="https://www.twitter.com/"><i class="fab fa-twitter"></i></a>
+                                <a href="https://www.linkedin.com/"><i class="fab fa-linkedin-in"></i></a>
+                                <a href="https://www.whatsapp.com/"><i class="fab fa-whatsapp"></i></a>
                             </div>
                         </div>
                     </div>
