--- a/kontak.html
+++ b/kontak.html
@@ -271,8 +271,8 @@
                 <div class="col-xl-6 col-md-7">
                     <div class="title-area text-center">
                         <h2 class="sec-title">Kontak Informasi dan Pengaduan</h2>
-                        <p class="sec-text">Organic foods are typically certified by regulatory bodies to ensure they
-                            meet specific organic standards.</p>
+                        <p class="sec-text">Sampaikan tanggapan anda terkait pelayanan dan produk di Pasar Desa melalui
+                            kontak dibawah ini.</p>
                     </div>
                 </div>
             </div>
