--- a/produk-details.html
+++ b/produk-details.html
@@ -66,46 +66,33 @@
             <div class="row gx-60">
                 <div class="col-lg-6">
                     <div class="product-big-img">
-                        <div class="img"><img src="assets/img/product/product_details_1_1.jpg" alt="Product Image">
+                        <div class="img"><img src="assets/img/product/1/1.webp" alt="Product Image">
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 align-self-center">
                     <div class="product-about">
-                        <p class="price">$120.85<del>$150.99</del></p>
-                        <h2 class="product-title">Bosco Apple Fruit</h2>
-                        <div class="product-rating">
-                            <div class="star-rating" role="img" aria-label="Rated 5.00 out of 5"><span
-                                    style="width:100%">Rated <strong class="rating">5.00</strong> out of 5 based on
-                                    <span class="rating">1</span> customer rating</span></div>
-                            <a href="produk-details.html" class="woocommerce-review-link">(<span class="count">4</span>
-                                customer reviews)</a>
-                        </div>
-                        <p class="text">Prepare to embark on a sensory journey with the Bosco Apple, a fruit that
-                            transcends the ordinary and promises an unparalleled taste experience. These apples are
-                            nothing short of nature’s masterpiece, celebrated for their distinctive blend of flavors and
-                            their captivating visual allure.</p>
+                        <p class="price">Rp. 15.000,-<del>Rp. 27.500,-</del></p>
+                        <h2 class="product-title">Pisau Getah Karet</h2>
+                        <p class="text">Pisau sadap karet merupakan alat sadap karet yang berfungsi untuk menyadap kulit
+                            karet pada batang pohon karet untuk diambil getahnya. Mata Pisau dari Besi
+                            Baja- Gagang Pisau dari Kayu- Panjang Pisau + Gagang 30 cm- Lebar Mata Pisau 2, 5-3 cm-
+                            Lengkung Mata Pisau 60°- 1 dus 12 pcs.</p>
                         <div class="mt-2 link-inherit">
                             <p>
-                                <strong class="text-title me-3">Availability:</strong>
-                                <span class="stock in-stock"><i class="far fa-check-square me-2 ms-1"></i>In
-                                    Stock</span>
+                                <strong class="text-title me-3">Stok :</strong>
+                                <span class="stock in-stock"><i class="far fa-check-square me-2 ms-1"></i>Ada</span>
                             </p>
                         </div>
                         <div class="actions">
-                            <div class="quantity">
-                                <input type="number" class="qty-input" step="1" min="1" max="100" name="quantity"
-                                    value="1" title="Qty">
-                                <button class="quantity-plus qty-btn"><i class="far fa-chevron-up"></i></button>
-                                <button class="quantity-minus qty-btn"><i class="far fa-chevron-down"></i></button>
-                            </div>
-                            <button class="th-btn">Add to Cart</button>
+                            <button class="th-btn">Pesan Melalui Whatsapp</button>
                             <a href="#" class="icon-btn"><i class="far fa-heart"></i></a>
                         </div>
                         <div class="product_meta">
-                            <span class="sku_wrapper">SKU: <span class="sku">Bosco-Apple-Fruit</span></span>
-                            <span class="posted_in">Category: <a href="produk.html">Fresh Fruits</a></span>
-                            <span>Tags: <a href="produk.html">Fruits</a><a href="produk.html">Organic</a></span>
+                            <span class="posted_in">Category: <a href="produk.html">Pasar Desa, Produk Lokal,
+                                </a></span>
+                            <span>Tags: <a href="produk.html">Produk Lokal</a><a href="produk.html">Produk
+                                    Desa</a></span>
                         </div>
                     </div>
                 </div>
