--- a/kontak.html
+++ b/kontak.html
@@ -85,7 +85,7 @@
                             </p>
                         </div>
                         <div class="actions">
-                            <button class="th-btn">Pesan Melalui Whatsapp</button>
+                            <a href="https://wa.link/mzykhw" class="th-btn">Pesan Melalui Whatsapp</a>
                             <a href="#" class="icon-btn"><i class="far fa-heart"></i></a>
                         </div>
                         <div class="product_meta">
