--- a/produk.html
+++ b/produk.html
@@ -276,7 +276,7 @@
                     <div class="col-md-auto">
                         <form class="woocommerce-ordering" method="get">
                             <select name="orderby" class="orderby" aria-label="Shop order">
-                                <option value="menu_order" selected="selected">Lokasi Pasar</option>
+                                <option value="menu_order" selected="selected">Lokasi Desa</option>
                                 <option value="popularity">Desa Pegayut</option>
                                 <option value="rating">Desa Beti</option>
                                 <option value="date">Desa Sungai Lebung</option>
