--- a/produk.html
+++ b/produk.html
@@ -269,7 +269,7 @@
         <div class="container">
             <div class="th-sort-bar">
                 <div class="row justify-content-between align-items-center">
-                    <div class="col-md-6">
+                    <div class="col-md">
                         <p class="woocommerce-result-count">Showing 1–12 of 16 results</p>
                     </div>
 
