--- a/index.html
+++ b/index.html
@@ -394,6 +394,37 @@
         </div>
     </section>
 
+    <section class="space" data-pos-for="#category-sec" data-sec-pos="bottom-half">
+        <div class="container z-index-common">
+            <div class="row gy-4 justify-content-center">
+                <div class="col-xl-4 col-md-6">
+                    <div class="offer-box mega-hover" data-bg-src="assets/img/promo/1.png">
+                        <span class="box-subtitle">Termurah</span>
+                        <h3 class="box-title">Aneka Buah <br> dan Sayur</h3>
+                        <a href="produk.html" class="th-btn btn-sm">Belanja Sekarang<i
+                                class="fas fa-chevrons-right ms-2"></i></a>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-md-6">
+                    <div class="offer-box mega-hover" data-bg-src="assets/img/promo/3.png">
+                        <span class="box-subtitle bg-theme">Terlengkap</span>
+                        <h3 class="box-title">Kebutuhan <br> Pokok</h3>
+                        <a href="produk.html" class="th-btn style4 btn-sm">Belanja Sekarang<i
+                                class="fas fa-chevrons-right ms-2"></i></a>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-md-6">
+                    <div class="offer-box mega-hover" data-bg-src="assets/img/promo/2.png">
+                        <span class="box-subtitle">Serba Ada</span>
+                        <h3 class="box-title">Semua Serba <br> Ada disini </h3>
+                        <a href="produk.html" class="th-btn btn-sm">Belanja Sekarang<i
+                                class="fas fa-chevrons-right ms-2"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="space">
         <div class="container">
             <div class="row justify-content-lg-between justify-content-center align-items-end">
@@ -1183,7 +1214,7 @@
                 <div class="col-xl-9 col-lg-8 col-md-6">
                     <div class="row justify-content-lg-between justify-content-center align-items-center">
                         <div class="col-md text-center text-md-start">
-                            <h2 class="sec-title mb-30">Produk Terlaris</h2>
+                            <h2 class="sec-title mb-30">Produk Baru</h2>
                         </div>
                         <div class="col-md-auto d-none d-lg-inline-block">
                             <div class="sec-btn mb-35">
@@ -1422,6 +1453,123 @@
                                             <div class="star-rating" role="img" aria-label="Rated 5.00 out of 5">
                                                 <span>Rated <strong class="rating">5.00</strong> out of 5 based on <span
                                                         class="rating">1</span> customer rating</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="bg-top-center overflow-hidden space-top" data-bg-src="assets/img/product/1/15.jpg">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-xl-6 col-md-8">
+                    <div class="title-area text-center">
+                        <h2 class="sec-title text-white">Produk Asli Daerah</h2>
+                        <p class="sec-text text-light">Aneka produk dan kerajinan khas ogan ilir yang
+                            menarik dan berkualitas.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="deal-sec-area">
+                <div class="row pt-50 gy-4 justify-content-center">
+                    <div class="col-xl-3 text-xl-start text-center">
+                        <div class="offer-grid mega-hover" data-bg-src="assets/img/pasarwdg.jpg">
+                            <span class="h6 box-subtitle text-white"><span class="text-theme">20% Online
+                                </span>OFF</span>
+                            <h3 class="box-title text-white">Now You Get The <br> Vegetable</h3>
+                            <a href="produk.html" class="th-btn btn-sm style3">Belanja Sekarang<i
+                                    class="fas fa-chevrons-right ms-2"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-xl-9">
+                        <div class="row gy-4">
+
+                            <div class="col-lg-4 col-sm-6">
+                                <div class="th-product product-grid">
+                                    <div class="product-img">
+                                        <img src="assets/img/product/1/6.jpg" alt="Product Image">
+                                        <span class="product-tag">Baru</span>
+                                        <div class="actions">
+                                            <a href="#QuickView" class="icon-btn popup-content"><i
+                                                    class="far fa-eye"></i></a>
+                                            <a href="#" class="icon-btn"><i class="far fa-cart-plus"></i></a>
+                                            <a href="#" class="icon-btn"><i class="far fa-heart"></i></a>
+                                        </div>
+                                    </div>
+                                    <div class="product-content">
+                                        <a href="produk-details.html" class="product-category">Kerajinan Lokal</a>
+                                        <h3 class="product-title"><a href="produk-details.html">Tas Purun</a></h3>
+                                        <span class="price">Rp. 17.785</span>
+                                        <div class="woocommerce-product-rating">
+                                            <span class="count">(120 dilihat)</span>
+                                            <div class="star-rating" role="img" aria-label="Rated 5.00 out of 5">
+                                                <span>Rated <strong class="rating">5.00</strong> out of 5 based on
+                                                    <span class="rating">1</span> customer rating</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                            <div class="col-lg-4 col-sm-6">
+                                <div class="th-product product-grid">
+                                    <div class="product-img">
+                                        <img src="assets/img/product/1/6.jpg" alt="Product Image">
+                                        <span class="product-tag">Baru</span>
+                                        <div class="actions">
+                                            <a href="#QuickView" class="icon-btn popup-content"><i
+                                                    class="far fa-eye"></i></a>
+                                            <a href="#" class="icon-btn"><i class="far fa-cart-plus"></i></a>
+                                            <a href="#" class="icon-btn"><i class="far fa-heart"></i></a>
+                                        </div>
+                                    </div>
+                                    <div class="product-content">
+                                        <a href="produk-details.html" class="product-category">Kerajinan Lokal</a>
+                                        <h3 class="product-title"><a href="produk-details.html">Tas Purun</a></h3>
+                                        <span class="price">Rp. 17.785</span>
+                                        <div class="woocommerce-product-rating">
+                                            <span class="count">(120 dilihat)</span>
+                                            <div class="star-rating" role="img" aria-label="Rated 5.00 out of 5">
+                                                <span>Rated <strong class="rating">5.00</strong> out of 5 based on
+                                                    <span class="rating">1</span> customer rating</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                            <div class="col-lg-4 col-sm-6">
+                                <div class="th-product product-grid">
+                                    <div class="product-img">
+                                        <img src="assets/img/product/1/6.jpg" alt="Product Image">
+                                        <span class="product-tag">Baru</span>
+                                        <div class="actions">
+                                            <a href="#QuickView" class="icon-btn popup-content"><i
+                                                    class="far fa-eye"></i></a>
+                                            <a href="#" class="icon-btn"><i class="far fa-cart-plus"></i></a>
+                                            <a href="#" class="icon-btn"><i class="far fa-heart"></i></a>
+                                        </div>
+                                    </div>
+                                    <div class="product-content">
+                                        <a href="produk-details.html" class="product-category">Kerajinan Lokal</a>
+                                        <h3 class="product-title"><a href="produk-details.html">Tas Purun</a></h3>
+                                        <span class="price">Rp. 17.785</span>
+                                        <div class="woocommerce-product-rating">
+                                            <span class="count">(120 dilihat)</span>
+                                            <div class="star-rating" role="img" aria-label="Rated 5.00 out of 5">
+                                                <span>Rated <strong class="rating">5.00</strong> out of 5 based on
+                                                    <span class="rating">1</span> customer rating</span>
                                             </div>
                                         </div>
                                     </div>
