--- a/index.html
+++ b/index.html
@@ -1467,13 +1467,13 @@
         </div>
     </section>
 
-    <section class="bg-top-center overflow-hidden space-top" data-bg-src="assets/img/product/1/15.jpg">
+    <section class="bg-top-center overflow-hidden space-top">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-xl-6 col-md-8">
                     <div class="title-area text-center">
-                        <h2 class="sec-title text-white">Produk Asli Daerah</h2>
-                        <p class="sec-text text-light">Aneka produk dan kerajinan khas ogan ilir yang
+                        <h2 class="sec-title">Produk Asli Daerah</h2>
+                        <p class="sec-text">Aneka produk dan kerajinan khas ogan ilir yang
                             menarik dan berkualitas.</p>
                     </div>
                 </div>
@@ -1483,11 +1483,11 @@
                 <div class="row pt-50 gy-4 justify-content-center">
                     <div class="col-xl-3 text-xl-start text-center">
                         <div class="offer-grid mega-hover" data-bg-src="assets/img/pasarwdg.jpg">
-                            <span class="h6 box-subtitle text-white"><span class="text-theme">20% Online
-                                </span>OFF</span>
-                            <h3 class="box-title text-white">Now You Get The <br> Vegetable</h3>
-                            <a href="produk.html" class="th-btn btn-sm style3">Belanja Sekarang<i
-                                    class="fas fa-chevrons-right ms-2"></i></a>
+                            <span class="h6 box-subtitle text-white"><span class="text-white">Kerajinan <span
+                                        class="text-theme2">Lokal</span>
+                                    <h3 class="box-title text-white mt-2">Produk <br> Lokal Berkualitas</h3>
+                                    <a href="produk.html" class="th-btn btn-sm style2">Belanja Sekarang<i
+                                            class="fas fa-chevrons-right ms-2"></i></a>
                         </div>
                     </div>
                     <div class="col-xl-9">
