--- a/index.html
+++ b/index.html
@@ -1482,7 +1482,7 @@
             <div class="deal-sec-area">
                 <div class="row pt-50 gy-4 justify-content-center">
                     <div class="col-xl-3 text-xl-start text-center">
-                        <div class="offer-grid mega-hover" data-bg-src="assets/img/pasarwdg.jpg">
+                        <div class="offer-grid mega-hover" data-bg-src="assets/img/pasarwdg.png">
                             <span class="h6 box-subtitle text-white"><span class="text-white">Kerajinan <span
                                         class="text-theme2">Lokal</span>
                                     <h3 class="box-title text-white mt-2">Produk <br> Lokal Berkualitas</h3>
