--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
         </div>
     </header>
 
-    <div class="space th-hero-wrapper hero-3" id="hero">
+    <div class="th-hero-wrapper hero-3" id="hero">
         <div class="shape-mockup" data-top="0" data-left="0"><img src="assets/img/shape/vector_shape_8.png" alt="shape">
         </div>
         <div class="shape-mockup" data-top="0" data-right="0"><img src="assets/img/shape/vector_shape_9.png"
@@ -273,12 +273,12 @@
         <div class="container">
             <div class="row justify-content-end">
                 <div class="col-xl-12">
-                    <div class="swiper th-slider rounded-10" id="heroSlider3" data-slider-options='{"effect":"fade"}'>
+                    <div class="swiper th-slider" id="heroSlider3" data-slider-options='{"effect":"fade"}'>
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                                <div class="hero-inner" data-bg-src="assets/img/product/1/15.jpg">
+                                <div class="hero-inner" data-bg-src="assets/img/promo/bane1.png">
                                     <div class="hero-style3">
-                                        <span class="hero-subtitle" data-ani="slideinup" data-ani-delay="0.0s">100%
+                                        <!-- <span class="hero-subtitle" data-ani="slideinup" data-ani-delay="0.0s">100%
                                             Produk Lokal</span>
                                         <h1 class="hero-title2 text-white">
                                             <span class="title1" data-ani="slideinup" data-ani-delay="0.2s">Dari Desa,
@@ -290,7 +290,7 @@
                                             Pasar Desa adalah platform digital berbasis website yang dirancang khusus
                                             untuk
                                             memfasilitasi desa-desa di Kabupaten Ogan Ilir dalam mempromosikan dan
-                                            menjual produk-produk lokal unggulan.</p>
+                                            menjual produk-produk lokal unggulan.</p> -->
                                         <a href="profil.html" class="th-btn style4" data-ani="slideinup"
                                             data-ani-delay="0.6s">Belanja Sekarang<i
                                                 class="fas fa-chevrons-right ms-2"></i></a>
@@ -298,9 +298,9 @@
                                 </div>
                             </div>
                             <div class="swiper-slide">
-                                <div class="hero-inner" data-bg-src="assets/img/product/1/12.jpg">
+                                <div class="hero-inner" data-bg-src="assets/img/promo/bane2.png">
                                     <div class="hero-style3">
-                                        <span class="hero-subtitle" data-ani="slideinup" data-ani-delay="0.0s">Pasar
+                                        <!-- <span class="hero-subtitle" data-ani="slideinup" data-ani-delay="0.0s">Pasar
                                             Desa</span>
                                         <h1 class="hero-title2 text-white">
                                             <span class=" title1" data-ani="slideinup" data-ani-delay="0.2s">Pasar
@@ -311,7 +311,7 @@
                                         <p class="hero-text text-white" data-ani=" slideinup" data-ani-delay="0.5s">
                                             Aplikasi ini menjadi jembatan antara pelaku UMKM desa, pengrajin, petani,
                                             nelayan, dan masyarakat umum dengan pasar yang lebih luas, baik di tingkat
-                                            kabupaten maupun nasional.</p>
+                                            kabupaten maupun nasional.</p> -->
                                         <a href="profil.html" class="th-btn style4" data-ani="slideinup"
                                             data-ani-delay="0.6s">Belanja Sekarang<i
                                                 class="fas fa-chevrons-right ms-2"></i></a>
@@ -319,9 +319,9 @@
                                 </div>
                             </div>
                             <div class="swiper-slide">
-                                <div class="hero-inner" data-bg-src="assets/img/product/1/14.jpg">
+                                <div class="hero-inner" data-bg-src="assets/img/promo/bane3.png">
                                     <div class="hero-style3">
-                                        <span class="hero-subtitle" data-ani="slideinup" data-ani-delay="0.0s">Pasar
+                                        <!-- <span class="hero-subtitle" data-ani="slideinup" data-ani-delay="0.0s">Pasar
                                             Desa</span>
                                         <h1 class="hero-title2 text-white">
                                             <span class="title1" data-ani="slideinup" data-ani-delay="0.2s">Bangkitkan
@@ -332,7 +332,7 @@
                                         <p class="hero-text text-white" data-ani="slideinup" data-ani-delay="0.5s">
                                             Pasar Desa, membantu pelaku usaha desa memanfaatkan teknologi digital untuk
                                             meningkatkan
-                                            pendapatan dan memperkuat daya saing produk lokal.</p>
+                                            pendapatan dan memperkuat daya saing produk lokal.</p> -->
                                         <a href="profil.html" class="th-btn style4" data-ani="slideinup"
                                             data-ani-delay="0.6s">Belanja Sekarang<i
                                                 class="fas fa-chevrons-right ms-2"></i></a>
@@ -394,7 +394,7 @@
         </div>
     </section>
 
-    <section class="space" data-pos-for="#category-sec" data-sec-pos="bottom-half">
+    <section class="mt-4 space-extra-bottom" data-pos-for=" #category-sec" data-sec-pos="bottom-half">
         <div class="container z-index-common">
             <div class="row gy-4 justify-content-center">
                 <div class="col-xl-4 col-md-6">
