--- a/index.html
+++ b/index.html
@@ -278,19 +278,6 @@
                             <div class="swiper-slide">
                                 <div class="hero-inner" data-bg-src="assets/img/promo/bane1.png">
                                     <div class="hero-style3">
-                                        <!-- <span class="hero-subtitle" data-ani="slideinup" data-ani-delay="0.0s">100%
-                                            Produk Lokal</span>
-                                        <h1 class="hero-title2 text-white">
-                                            <span class="title1" data-ani="slideinup" data-ani-delay="0.2s">Dari Desa,
-                                            </span>
-                                            <span class="title2" data-ani="slideinup" data-ani-delay="0.3s">Ogan Ilir
-                                                Maju!</span>
-                                        </h1>
-                                        <p class="hero-text text-white" data-ani="slideinup" data-ani-delay="0.5s">
-                                            Pasar Desa adalah platform digital berbasis website yang dirancang khusus
-                                            untuk
-                                            memfasilitasi desa-desa di Kabupaten Ogan Ilir dalam mempromosikan dan
-                                            menjual produk-produk lokal unggulan.</p> -->
                                         <a href="profil.html" class="th-btn style4" data-ani="slideinup"
                                             data-ani-delay="0.6s">Belanja Sekarang<i
                                                 class="fas fa-chevrons-right ms-2"></i></a>
@@ -300,18 +287,6 @@
                             <div class="swiper-slide">
                                 <div class="hero-inner" data-bg-src="assets/img/promo/bane2.png">
                                     <div class="hero-style3">
-                                        <!-- <span class="hero-subtitle" data-ani="slideinup" data-ani-delay="0.0s">Pasar
-                                            Desa</span>
-                                        <h1 class="hero-title2 text-white">
-                                            <span class=" title1" data-ani="slideinup" data-ani-delay="0.2s">Pasar
-                                                Desa,</span>
-                                            <span class="title2" data-ani="slideinup" data-ani-delay="0.3s">Digitalisasi
-                                                Ekonomi Desa</span>
-                                        </h1>
-                                        <p class="hero-text text-white" data-ani=" slideinup" data-ani-delay="0.5s">
-                                            Aplikasi ini menjadi jembatan antara pelaku UMKM desa, pengrajin, petani,
-                                            nelayan, dan masyarakat umum dengan pasar yang lebih luas, baik di tingkat
-                                            kabupaten maupun nasional.</p> -->
                                         <a href="profil.html" class="th-btn style4" data-ani="slideinup"
                                             data-ani-delay="0.6s">Belanja Sekarang<i
                                                 class="fas fa-chevrons-right ms-2"></i></a>
@@ -321,18 +296,6 @@
                             <div class="swiper-slide">
                                 <div class="hero-inner" data-bg-src="assets/img/promo/bane3.png">
                                     <div class="hero-style3">
-                                        <!-- <span class="hero-subtitle" data-ani="slideinup" data-ani-delay="0.0s">Pasar
-                                            Desa</span>
-                                        <h1 class="hero-title2 text-white">
-                                            <span class="title1" data-ani="slideinup" data-ani-delay="0.2s">Bangkitkan
-                                                Potensi Desa, </span>
-                                            <span class="title2" data-ani="slideinup" data-ani-delay="0.3s">Bersama
-                                                Pasar Desa</span>
-                                        </h1>
-                                        <p class="hero-text text-white" data-ani="slideinup" data-ani-delay="0.5s">
-                                            Pasar Desa, membantu pelaku usaha desa memanfaatkan teknologi digital untuk
-                                            meningkatkan
-                                            pendapatan dan memperkuat daya saing produk lokal.</p> -->
                                         <a href="profil.html" class="th-btn style4" data-ani="slideinup"
                                             data-ani-delay="0.6s">Belanja Sekarang<i
                                                 class="fas fa-chevrons-right ms-2"></i></a>
@@ -1199,7 +1162,7 @@
         </div>
     </section>
 
-    <section class="space">
+    <section class="mt-4">
         <div class="container">
             <div class="row flex-row-reverse">
                 <div class="col-xl-3 col-lg-4 col-md-6 mb-40 mb-lg-0">
