--- a/index.html
+++ b/index.html
@@ -1459,7 +1459,7 @@
                             <div class="col-lg-4 col-sm-6">
                                 <div class="th-product product-grid">
                                     <div class="product-img">
-                                        <img src="assets/img/product/1/6.jpg" alt="Product Image">
+                                        <img src="assets/img/promo/produk-lokal-1.webp" alt="Product Image">
                                         <span class="product-tag">Baru</span>
                                         <div class="actions">
                                             <a href="#QuickView" class="icon-btn popup-content"><i
@@ -1470,8 +1470,9 @@
                                     </div>
                                     <div class="product-content">
                                         <a href="produk-details.html" class="product-category">Kerajinan Lokal</a>
-                                        <h3 class="product-title"><a href="produk-details.html">Tas Purun</a></h3>
-                                        <span class="price">Rp. 17.785</span>
+                                        <h3 class="product-title"><a href="produk-details.html">Aneka
+                                                Akesoris</a></h3>
+                                        <span class="price">Rp. 35.785</span>
                                         <div class="woocommerce-product-rating">
                                             <span class="count">(120 dilihat)</span>
                                             <div class="star-rating" role="img" aria-label="Rated 5.00 out of 5">
@@ -1515,7 +1516,7 @@
                             <div class="col-lg-4 col-sm-6">
                                 <div class="th-product product-grid">
                                     <div class="product-img">
-                                        <img src="assets/img/product/1/6.jpg" alt="Product Image">
+                                        <img src="assets/img/promo/produk-lokal-2.jpg" alt="Product Image">
                                         <span class="product-tag">Baru</span>
                                         <div class="actions">
                                             <a href="#QuickView" class="icon-btn popup-content"><i
@@ -1526,8 +1527,9 @@
                                     </div>
                                     <div class="product-content">
                                         <a href="produk-details.html" class="product-category">Kerajinan Lokal</a>
-                                        <h3 class="product-title"><a href="produk-details.html">Tas Purun</a></h3>
-                                        <span class="price">Rp. 17.785</span>
+                                        <h3 class="product-title"><a href="produk-details.html">Aneka Tas Rajutan</a>
+                                        </h3>
+                                        <span class="price">Rp. 47.785</span>
                                         <div class="woocommerce-product-rating">
                                             <span class="count">(120 dilihat)</span>
                                             <div class="star-rating" role="img" aria-label="Rated 5.00 out of 5">
